appendix to image

--- a/Final/finalProjectTeam4.Rmd
+++ b/Final/finalProjectTeam4.Rmd
@@ -324,50 +324,4 @@ Zafer, P., William, A. O., & Leslie, S. K. (2014). The Long-term Impact of Educa
 
 ## Appendix 1
 
-### Paths to be followed to retrieve data
-
-#### Independent variable:  
-
-https://stats.oecd.org/Index.aspx?DataSetCode=EAG_FIN_SOURCE 
-
-Filters: countries in sample / years: 2013-2017 / ISC11: Primary education (ISCED2011 level 1) + Lower secondary education (ISCED2011 level 2) + Upper secondary education (ISCED2011 level 3) + Long cycle tertiary (ISCED2011 levels 6 to 8) / REF_SECTOR: all sectors / COUNTERPART_SECTOR: all public and private institutions / EXPENDITURE_TYPE: all expenditure types / UNIT_ MEASURE: USD Purchasing Power Parity 
-
-#### Control variables: 
-
-GDP per head: 
-https://stats.oecd.org/Index.aspx?QueryId=54369 
-Filters: countries in sample / years: 2013-2017 / Measure: USD constant prices, 2015 PPPs 
-Path: Gross domestic product (GDP)  : GDP per head, US $, constant prices, constant PPPs, reference year 2015
-
-GDP:
-https://stats.oecd.org/Index.aspx?QueryId=54369
-Path: Gross domestic product (GDP)  : GDP, US $, current prices, current PPPs, millions
-Filters: countries in sample / years: 2013-2017 /
-
-Educational attainment: 
-https://data.oecd.org/eduatt/adult-education-level.htm#indicator-chart 
-Path: Adult Education Level 
-Filters: countries in sample / Perspective: Tertiary / time: years: 2013-2017 
-
-Student-teacher ratio: 
-https://stats.oecd.org/   
-Path: Education and training -> education at a glance -> teachers and the learning environment -> student-teacher ration and average class size. 
-
-#### Dependent variable: 
-
-https://stats.oecd.org/  
-Path: Education and training -> education at a glance -> educational attainment and outcomes-> educational attainment and labor force status-> Employment, unemployment and inactivity rate of 25-64 year-olds, by programme orientation 
-Filters: indicator: unemployment /  
-
-
-
-
-
-
-
-
-
-
-
-
-
+![](./appendix1.png)
