--- a/Team4Project/finalProjectTeam4.Rmd
+++ b/Team4Project/finalProjectTeam4.Rmd
@@ -86,7 +86,7 @@ The analysis did not show any significant results for the impact of expenditures
 
 Extant literature has investigated the positive relationship between education and economic growth. It is widely accepted that, as individuals become more educated, they turn into greater citizens and contribute to the improvement of the general standard of living of society (Obi & Obi, 2014). Moreover, this association has been tested for different countries from developed countries as the United-States (Jorgenson & Fraumeni, 1992) to developing countries, as Tanzania, Zambia (Jung & Thorbecke, 2001), and India (Chandra, 2010). All these scholars have been able to prove that education expenditures have a positive and significant impact on growth. 
 
-Consequently, education is one of the most important destinations of government expenditures in both developed and developing economies as it will, in the long run, transform their human, economic, cultural and social dimensions. In their study, Obi & Obi (2014) highlight that to promote economic growth, the efficient use of labor and capital requires highly trained and skilled individuals. Ensuring that people have access to the best environment in which they can improve and cultivate their talents is for institutions as imperative as investing in other factors of production such as finance, natural resources and physical equipment. Therefore, since citizens acquire their knowledge and develop their skills through education, it is crucial for governments – whose aim is to foster their countries’ economic development – to spend their savings in the academic system. On this last point, Quan & Beck (1987) add that education expenditures contribute to economic progress in two ways: attracting people to remain in the State and increasing workers’ productivity. The latter, by extension, improves citizens’ standard of living, creates job opportunities and promotes more equitable income distribution in the country (Mefteh, Bouhajeb, & Smaoui, 2016). 
+Consequently, education is one of the most important destinations of government expenditures in both developed and developing economies as it will, in the long run, transform their human, economic, cultural and social dimensions. In their study, Obi & Obi (2014) highlight that, to promote economic growth, the efficient use of labor and capital requires highly trained and skilled individuals. Ensuring that people have access to the best environment in which they can improve and cultivate their talents is for institutions as imperative as investing in other factors of production such as finance, natural resources and physical equipment. Therefore, since citizens acquire their knowledge and develop their skills through education, it is crucial for governments – whose aim is to foster their countries’ economic development – to spend their savings in the academic system. On this last point, Quan & Beck (1987) add that education expenditures contribute to economic progress in two ways: attracting people to remain in the State and increasing workers’ productivity. The latter, by extension, improves citizens’ standard of living, creates job opportunities and promotes more equitable income distribution in the country (Mefteh, Bouhajeb, & Smaoui, 2016). 
 
 Interestingly, Baqir, Harun, & Razani (2017) emphasize the compounding beneficial effect of spending in education. These investments would not only refine labour’s skills today, but they would generate even more skilled workers in the future, capable to satisfy the continuously changing labour market’s requirements. If a government decides to deploy a small portion of its savings to education, dramatic outcomes might occur for the economy, which will face a shortage of skilled labor and become unable to compete at the global level. 
 
@@ -96,7 +96,7 @@ Other than the acknowledged impact that education has on economic growth and the
 
 However, despite the shared belief that public expenditures are necessary to increase the quality of education, also taken into account by Grimaccia & Lima (2013), there are no homogeneous results regarding the impact of public spending on employment levels.  
 
-On one hand, Grimaccia & Lima (2013), studied the 27 European Union countries, showing that higher investments in education lead to higher employment rates. Dachito, Alemu, & Alemu (2020), who studied the influence of government expenditure on unemployment in the Ethiopian context, found a negative correlation not only between expenditure and unemployment but also between expenditure and unemployment growth, validating Keynes’s theory – cited in Dachito, Alemu, & Alemu (2020). Fedderke & Luiz (2006) were able to show the beneficial impact on employment in the long run in South Africa and Zafer, while William, & Leslie (2014) did the same for the United-States.  
+On one hand, Grimaccia & Lima (2013), studied the 27 European Union countries, showing that higher investments in education lead to higher employment rates. Dachito, Alemu, & Alemu (2020), who studied the influence of government expenditure on unemployment in the Ethiopian context, found a negative correlation not only between expenditure and unemployment but also between expenditure and unemployment growth, validating Keynes’s theory – cited in Dachito, Alemu, & Alemu (2020). Fedderke & Luiz (2006) were able to show the beneficial impact on employment in the long run in South Africa and Zafer, William, & Leslie (2014) did the same for the United-States.  
 
 On the other hand, other scholars reached conclusions that contrast the previous ones. According to Nurudeen & Usman (2010), education expenditures negatively impact growth and Ahec Šonje, Deskar-Škrbić, & Šonje (2018), analyzing the public expenditure on education per student, showed its inefficiency in affecting unemployment.
 
@@ -122,13 +122,13 @@ The literature review emphasizes the importance of education in fostering countr
 
 According to the definition of the OECD (2020), primary education is designed to provide children between 5 and 11 years old a sound basic education in reading, writing and mathematics and a basic understanding of some other subjects (OECD).
 
-Investment in primary education depends on the proportion of young males and females of school age in the total population and is the largest share of expenditure on educational institutions. This data is justified by two reasons. First, primary and secondary education are envisaged as a standard public good. Second, especially at the primary and secondary levels, education is perceived as a means to equalize and redistribute social opportunities (Del Boca, Monfardini, & See, 2018; Hatos, 2014). Indeed, because Northern European governments invest more in early education than Southern European ones, cognitive test scores are higher, and inequality is lower. In most OECD countries, the enrollment rates are close to 100% at the primary levels, highlighting the need for governments to invest resources in this education level to provide the necessary basic knowledge to young citizens. This will give them the possibility to build the foundations of their academic and professional career, to contribute to the growth of the country. Hence, we define the following hypothesis:
+Investment in primary education depends on the proportion of young males and females of school age in the total population and is the largest share of expenditure on educational institutions (OECD, 2020). This data is justified by two reasons. First, primary and secondary education are envisaged as a standard public good. Second, especially at the primary and secondary levels, education is perceived as a means to equalize and redistribute social opportunities (Del Boca, Monfardini, & See, 2018; Hatos, 2014). Indeed, because Northern European governments invest more in early education than Southern European ones, cognitive test scores are higher, and inequality is lower (OECD, 2013). In most OECD countries, the enrollment rates are close to 100% at the primary levels (OECD, 2020), highlighting the need for governments to invest resources in this education level to provide the necessary basic knowledge to young citizens. This will give them the possibility to build the foundations of their academic and professional career, to contribute to the growth of the country. Hence, we define the following hypothesis:
 
 *Hypothesis 1: Higher government investments in primary education will lead to lower unemployment rates.* 
 
 ## Lower Secondary Education
 
-Lower secondary education provides the basics of education in a more specialized way than the primary level. The typical duration is three years, and, in some countries, it represents the final step of compulsory education. On average, across OECD countries, less than 3% of youth are out of school in primary and lower secondary education. The fourth Sustainable Development Goal of the UN focuses on the importance of education and learning to shape a sustainable future, stressing the necessity to provide investments in education. The lower secondary education is particularly relevant for its impact on pupils’ future education; according to Michaelowa (2007), there is a positive relationship between the quality of secondary and tertiary education. 
+Lower secondary education provides the basics of education in a more specialized way than the primary level. The typical duration is three years, and, in some countries, it represents the final step of compulsory education. On average, across OECD countries, less than 3% of youth are out of school in primary and lower secondary education (OECD, 2020). The fourth Sustainable Development Goal of the UN focuses on the importance of education and learning to shape a sustainable future, stressing the necessity to provide investments in education (United Nations, 2020). The lower secondary education is particularly relevant for its impact on pupils’ future education; according to Michaelowa (2007), there is a positive relationship between the quality of secondary and tertiary education. 
 
 Therefore, ensuring a smooth transition from lower to upper secondary education is a crucial step that may prevent students from quitting. We define the following hypothesis: 
 
@@ -136,7 +136,7 @@ Therefore, ensuring a smooth transition from lower to upper secondary education 
 
 ## Upper Secondary Education
 
-According to the definition of the OECD (2020), upper secondary education provides a higher specialisation than at lower secondary level. The attainment of this level of education has become a minimum requirement to be competitive in the modern labor market. Compared to their higher-educated peers, young people who leave school before the completion of the upper secondary education not only have lower job opportunities but tend to have lower social connectedness (OECD, 2019). As primary education, secondary education is perceived as a standard public good and for this reason, a fair amount of governments’ resources must be devoted to its development. Clearly, it is important for the government to verify whether the costs of its investments will be recovered. Since an upper secondary education offers good prospects of employability and tends to translate into higher earnings, governments will be able to receive higher tax income and social contributions. Therefore, we propose the following hypothesis: 
+According to the definition of the OECD (2020), upper secondary education provides a higher specialisation than at lower secondary level. The attainment of this level of education has become a minimum requirement to be competitive in the modern labor market. Compared to their higher-educated peers, young people who leave school before the completion of the upper secondary education not only have lower job opportunities but tend to have lower social connectedness (OECD, 2019). As primary education, secondary education is perceived as a standard public good and for this reason, a fair amount of governments’ resources must be devoted to its development and enhancement of its inclusiveness (OECD, 2012). Clearly, it is important for the government to verify whether the costs of its investments will be recovered. Since an upper secondary education offers good prospects of employability and tends to translate into higher earnings, governments will be able to receive higher tax income and social contributions. Therefore, we propose the following hypothesis: 
 
 *Hypothesis 3: Higher government investments in upper secondary education will lead to lower unemployment rates.*
 
@@ -156,7 +156,7 @@ All data were collected from the OECD database to ensure coherent measurements, 
 
 ## Dependent Variable
 
-Our dependent variable is the level of unemployment. It is measured as the percentage of the population between 24 and 64 years of age that is without employment.  
+Our dependent variable is the level of unemployment. It is measured as the percentage of the population between 25 and 64 years of age that is without employment.  
 
 ## Independent Variables
 
@@ -176,7 +176,7 @@ The second categorical variable classifies countries by their level of income, a
 
 ## Explanatory Data Analysis
 
-In **Table 1** a brief summary of our variables is presented, and some key characteristics of the data’s distribution are provided. Starting with the dependent variable — unemployment — the average rate among the 26 countries in the five years under focus is 8.49%, with an interesting minimum value of 2.8% in Iceland in 2017, and a disastrous maximum rate of 27.5% in Greece in 2013, justified by the prolonged crisis that affected the country. Looking at the independent variables, it is relevant to highlight that the primary education is the schooling level in which governments spend the highest percentage of GDP, compared to other levels. The mean of the variable is 1.3% and its maximum is 2.5%; whilst for lower-secondary education they are 0.9% and 1.3% respectively; for upper-secondary education they are 0.97% and 1.63% respectively; for long-cycle tertiary they are 1.28% and 2.05% respectively. Finally, for the control variables, the mean of the average student-teacher ratio is 13.64, meaning that on average, in the countries of our dataset, for each teacher — no matter the educational level — follows 13 students. We must point out that the average of student-teacher ratio is the lowest in lower-secondary education (11.92) and the highest in long-cycle tertiary (15.8). Concerning the educational attainment, the countries’ mean is 34%, implying that on average, in the 26 countries of the sample, 34% of the population has concluded tertiary education. The minimum value is 16.3% in Italy in 2013, and the maximum is 50.9% in Israel in 2017. If associated with unemployment rates, this data highlights that in countries where people are more educated, unemployment rates are lower – i.e., in Israel, to 50.9% tertiary attainment is associated with an unemployment rate of 4.2% in the same year, whilst in Italy to 16.3% the unemployment was 12.1% in the same year.
+In **Table 1** a brief summary of our variables is presented, and some key characteristics of the data’s distribution are provided. Starting with the dependent variable — unemployment — the average rate among the 26 countries in the five years under focus is 8.49%, with an interesting minimum value of 2.8% in Iceland in 2017, and a disastrous maximum rate of 27.5% in Greece in 2013, justified by the prolonged crisis that affected the country. Looking at the independent variables, it is relevant to highlight that the primary education is the schooling level in which governments spend the highest percentage of GDP, compared to other levels. The mean of the variable is 1.3% and its maximum is 2.5%; whilst for lower-secondary education they are 0.9% and 1.3% respectively; for upper-secondary education they are 0.97% and 1.63% respectively; for long-cycle tertiary they are 1.28% and 2.05% respectively. Finally, for the control variables, the mean of the average student-teacher ratio is 13.64, meaning that, on average, in the countries of our dataset, for each teacher — no matter the educational level — follows 13 students. We must point out that the average of student-teacher ratio is the lowest in lower-secondary education (11.92) and the highest in long-cycle tertiary (15.8). Concerning the educational attainment, the countries’ mean is 34%, implying that on average, in the 26 countries of the sample, 34% of the population has concluded tertiary education. The minimum value is 16.3% in Italy in 2013, and the maximum is 50.9% in Israel in 2017. If associated with unemployment rates, this data highlights that in countries where people are more educated, unemployment rates are lower – i.e., in Israel, to 50.9% tertiary attainment is associated with an unemployment rate of 4.2% in the same year, whilst in Italy to 16.3% the unemployment was 12.1% in the same year.
 
 Concerning the distinction by income level, our 130 observations fall homogeneously in the four categories. Indeed, we had 33,32,32,33 observations for lower, lower-middle, upper-middle and upper income respectively. It is important to highlight that, since we considered a period of five years, some countries have experienced fluctuations of their income levels, measured by GDP per capita. Therefore, in some cases, they changed their categories from one year to another. For example, Italy was classified as lower-middle in 2013, 2014, 2015, 2016 and changed to upper-middle in 2017. For the geographical categorization, we had 9,1,1,4,2,1,8 countries in Eastern Europe, Middle East, North America, Northern Europe, Oceania, South America and Western Europe.  
 
@@ -290,7 +290,7 @@ From the data analysis just presented it can be concluded that none of our initi
 
 ## Limitations
 
-Our study shows some limitations. Firstly, data were not available for all the OECD countries and, therefore, we were forced to restrict our analysis to just 26 of them and for the period between 2013-2017. This led us to further limitations when considering possible division among countries, all of them being categorized as high-income by the World Bank. Moreover, our study being one of the firsts to focus on governmental expenditures broken down by different schooling levels, we decided not to distinguish unemployment among different ages but to consider general levels for the workers aged 25-64. Nonetheless, it may be too broad of a group, and it is likely subjected to other factors apart from government spending in education.
+Our study shows some limitations. Firstly, data were not available for all the OECD countries and, therefore, we were forced to restrict our analysis to just 26 of them and for the period between 2013-2017. This led us to further limitations when considering possible divisions among countries, all of them being categorized as high-income by the World Bank. Moreover, our study being one of the firsts to focus on governmental expenditures broken down by different schooling levels, we decided not to distinguish unemployment among different ages but to consider general levels for the workers aged 25-64. Nonetheless, it may be too broad of a group, and it is likely subjected to other factors apart from government spending in education.
 
 ## Further Research
 
@@ -312,6 +312,8 @@ Chandra, A. (2010). *Does Government Expenditure on Education Promote Economic G
 
 Dachito, A. C., Alemu, M., & Alemu, B. (2020). The Impact of Public Education Expenditures on Graduate Unemployment: Cointegration Analysis to Ethiopia. *Journal of International Trade, Logistics and Law*, 6(2).
 
+Del Boca, D., Monfardini, C., & See, S. G. (2018). Government Education Expenditures, Pre-Primary Education and School Performance: A Cross-Country Analysis. *Institute of Labor Economics*.
+
 Fedderke, J., & Luiz, J. (2006). Infrastructure Investment in Long Run Economic Growth: South Africa 1875-2001. *World Development*, 34(6), 1037-1059.
 
 Flores, I. (2017). Modelling Efficiency in Education: How are European Countries Spending their Budgets and What Relation Between Money and Performance. *Sociologia*, 83.
@@ -319,6 +321,8 @@ Flores, I. (2017). Modelling Efficiency in Education: How are European Countries
 Gimenez, V., Prior, D., & Thieme, C. (2007). Technical Efficiency, Managerial Efficiency and Objective Setting in the Educational System: an International Comparison. *Journal of Operational Research Society*, 58(8), 996-1007.
 
 Grimaccia, E., & Lima, R. (2013). *Public Expenditure on Education, Education Attainment and Employment: a Comparison among European Countries*. Istat, Italy.
+
+Hatos, A. (2014). Public Spending for Eductaion. *Encyclopedia of Quality of Like and Well-Being Research*.
 
 Jorgenson, D. W., & Fraumeni, B. M. (1992). Investmeent in Education and U.S. Economic Growth. *The Scandinavian Journal of Economics*, 94, 51-70.
 
@@ -330,11 +334,17 @@ Nurudeen, A., & Usman, A. (2010). Government Expenditure and Economic Growth in 
 
 Obi, Z. C., & Obi, C. O. (2014). Impact of Government Expenditure on Education: the Nigerian Experience. *International Journal of Business and Finance Management Research*, 42-48.
 
+OECD. (2012). Equity and Quality in Education. Supporting Disandavatged Students and School. OECD Publishing
+
+OECD. (2013) PISA 2012 Assessment and Analytical Framework: Mathematics, Reading, Science, Problem Solving and Financial Literacy. OECD Publishing.
+
 OECD. (2019). *Education at a Glance 2019: OECD Indicators*. Paris: OECD Publishing.
 
 OECD. (2020). *Education at a Glance 2020: OECD Indicators*. OECD. Paris: OECD Publishing. Tratto da OECD.
 
 Quan, N. T., & Beck, J. H. (1987). Public Education Expenditures and State Economic Growth: Northeast and Sunbelt Regions. *Southern Economic Journal*, 54(2), 361-376.
+
+United Nations. (2020). Sustainable Development Goals. Retrieved from : United Nations - Department of economic and Social Affairs, Sustainable Development : https://sdgs.un.org/goals 
 
 Zafer, P., William, A. O., & Leslie, S. K. (2014). The Long-term Impact of Educational and Health Spending on Unemployment Rates. *European Journal of Economic and Political Studies*, 7(1), 49-69.
 
